<resources>
    <string name="app_name">Testtask</string>
    <string name="take_picture">Take Picture</string>
    <string name="total_number_of_taken_pictures">Total number of taken pictures:</string>
    <string name="template">Template:</string>
    <string name="name_template">template name</string>
    <string name="edit">Edit</string>
    <string name="_10">10</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_template">Input template</string>
    <string name="submit">Submit</string>
</resources>